--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 ListaDeNotas/node_modules
 FormularioDeCadastro/node_modules
 formcad/node_modules
+formcad
+FormularioDeCadastro copy/node_modules
+petshop/node_modules
+
+petshop/.eslintcache
